--- a/src/Editorsk.csproj
+++ b/src/Editorsk.csproj
@@ -113,7 +113,7 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Madskristensen.VisualStudio.SDK" Version="14.0.0-beta4" ExcludeAssets="runtime" />
+    <PackageReference Include="Madskristensen.VisualStudio.SDK" Version="14.0.68-pre" />
     <PackageReference Include="Microsoft.VSSDK.BuildTools">
       <Version>15.8.3247</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
